styles/Profile.module.scss
.container {
    width: var(--width-main);
    max-width: var(--width-max);
    margin: 0 auto;
    padding: 100px 0;
}
.tops {
    display: flex;
    flex-direction: column;
    gap: 30px;

    h2 {
        font-size: 30px;
    }
}
.top-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.top-header-main {
    display: flex;
    align-items: center;
    gap: 25px;
}
.top-items {
    display: grid;
    gap: 15px;
    grid-template-columns: repeat(auto-fill, minmax(min(160px, 100%), 1fr));
}
.top-item {
    text-align: center;
}
.top-image {
    width: 100%;
    aspect-ratio: 1;
    position: relative;
    border-radius: var(--border-radius-primary);
    background-color: var(--background-tertiary);
    overflow: hidden;
    display: block;
}
.top-item-name-loading {
    height: 19px;
    width: 100px;
    margin: 0 auto;
    margin-top: 5px;
    background-color: var(--background-quaternary);
    border-radius: var(--border-radius-primary);
}
.top-item-name {
    margin-top: 5px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
}

